@@ -1,7 +1,9 @@
 Revision history for Net-DynDNS-GoDaddy
 
 0.02 UNREL
-    -
+    - Added t/20-api_fail.t to test non-200 API returns
+    - Add prereq of Hook::Output::Tiny for testing t/20
+    - POD SYNOPSIS fix (s/Net::MyIP/Addr::MyIP)
 
 0.01    2022-05-17
     - Auto generated distribution with Dist::Mgr
